:lipstick: style: ensure text remains visible during webfont load

--- a/src/styles/initial.less
+++ b/src/styles/initial.less
@@ -3,6 +3,7 @@
   src: url("./fonts/sarasa-mono-sc.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 html,
